<resources>
    <string name="app_name">"Indus Health Plus"</string>
    <string name="app_name_app">"Indus Buddy"</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_screen">Login</string>
    <string name="title_activity_verifyOtp_screen">Verify OTP</string>
    <string name="title_activity_register_screen">Verify Details</string>
    <string name="title_activity_home">Home</string>
    <string name="login_enterhint">User Id</string>
    <string name="login_sendotp">Send OTP</string>
    <string name="login_or">Or</string>
    <string name="login_registeration">Verify yourself with \"Indus Buddy\"</string>
    <string name="otp_getOTP">Sit back &amp; Relax! while we verify you</string>
    <string name="otp_suggestion">(Enter the OTP below in case if we fail to detect SMS automatically)</string>
    <string name="otp_guest_dontReceivedOTp">Didn\'t receive OTP ?</string>
    <string name="otp_submit">\t\t\tSubmit\t\t\t</string>
    <string name="otp_resend">\t\t\tResend OTP\t\t\t</string>
    <string name="register_or">--- OR ---</string>
    <string name="register_user">\t\tVerify\t\t</string>
    <string name="register_fname">First Name</string>
    <string name="register_lname">Last Name</string>
    <string name="register_dob">DOB</string>
    <string name="register_mobile">Mobile</string>
    <string name="register_emailid">Email Id</string>
    <string name="login_empty_field">User id can not be empty !</string>
    <string name="netConnection">Please check  your internet connection !</string>
    <string name="register_name_empty">Please enter valid name !</string>
    <string name="register_empty_date">Date of birth can not be empty !</string>
    <string name="register_empty_mobile">Mobile number can not be empty !</string>
    <string name="register_invalid_mobile">Please enter valid mobile number with country code !</string>
    <string name="register_empty_email">Email Id can not be empty !</string>
    <string name="register_invalid_email">Please enter valid Email Id !</string>
    <string name="statuse_code_0">0</string>
    <string name="shars_userid">shars_userid</string>
    <string name="shars_user_otp">shars_user_otp</string>
    <string name="copyRight">copyright@2018 | privacy | all rights reserved</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="title_activity_centre_locator">CentreLocatorActivity</string>
    <string name="title_activity_my_un_availed_package">MyUnAvailedPackageActivity</string>
    <string name="acitity_my_centre_locator">Centre Locator</string>
    <string name="acitity_my_availed_packages">Unavailed Packages</string>
    <string name="acitity_my_availed_package">My Unavailed Package</string>
    <string name="title_activity_my_availed_package">MyAvailedPackageActivity</string>
    <string name="package_name">Package Name</string>
    <string name="package_addontest">Add on Test :</string>
    <string name="package_totalamount">Total Amount</string>
    <string name="package_paymode">Pay Status</string>
    <string name="btn_testdetails">Test Details</string>
    <string name="powered_by">Powered by,\nDogra Technologies Pvt. Ltd.</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="help_centre">Help Centre</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_my_health_chek_up">MyHealthChekUpActivity</string>
    <string name="title_activity_test_details">Test Details</string>
    <string name="myAppo_appno">Appt Number</string>
    <string name="myAppo_benifitest">Beneficiary</string>
    <string name="myAppo_benifirelation">Relation</string>
    <string name="myAppo_checkupcentre">Checkup Centre</string>
    <string name="myAppo_appsstatus">Appt Status</string>
    <string name="myAppo_rescheduleapp">Reschedule Appointment</string>
    <string name="title_activity_centre_details">Centre Details</string>
    <string name="centre_name">Centre Name</string>
    <string name="centre_address">Address :</string>
    <string name="centre_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also</string>
    <string name="dummytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, </string>
    <string name="centre_valueadd">Value Add</string>
    <string name="centre_packingAvail">Parking Available :</string>
    <string name="centre_parkingStatus">Coming soon</string>
    <string name="centre_foodProvider">Food Providers Service Available :</string>
    <string name="centre_Logistic">Logistics Available :</string>
    <string name="centre_uber">Uber</string>
    <string name="centre_ola">Ola</string>
    <string name="title_activity_show_on_maps">Centre on Map</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_get_appointment">GetAppointmentActivity</string>
    <string name="title_activity_my_health_guide">MyHealthGuideActivity</string>
    <string name="title_activity_test_av">TestAVActivity</string>
    <string name="my_appointment">My Appointment</string>
    <string name="hra">HRA</string>
    <string name="fa_user_icon">&#xf007;</string>
    <string name="fa_package_icon">&#xf466;</string>
    <string name="fa_calendar_icon">&#xf073;</string>
    <string name="fa_location_icon">&#xf3c5;</string>
    <string name="fa_gender_icon">&#xf225;</string>
    <string name="fa_mobile_icon">&#xf10b;</string>
    <string name="fa_file_icon">&#xf0f6;</string>
    <string name="fa_file_share_icon">&#xf1e0;</string>
    <string name="fa_plus_icon">&#xf067;</string>
    <string name="marker">&#xf041;</string>
    <string name="fa_heartrate">&#xf21e;</string>
    <string name="fa_bed">&#xf236;</string>
    <string name="fa_weight">&#xf496;</string>
    <string name="visitWise">By Visit</string>
    <string name="paramWise">By Parameter</string>
    <string name="title_activity_graph_by_visit">GraphByVisitActivity</string>
    <string name="file_name">Report</string>
    <string name="Camera_Add_Photo">Add Photo!</string>
    <string name="Camera_Take_Photo">Take Photo</string>
    <string name="Choose_from_Gallery">Choose from Gallery</string>
    <string name="Camera_Cancel">Cancel</string>
    <string name="IndusBuddySharedPrefs">IndusBUddySHaredPrefs</string>
    <string name="isLoggedin">isLoggedIn</string>
    <string name="heath_checkup">Health Checkup</string>
    <string name="health_guide">Health Guide</string>
    <string name="my_welness">My Wellness</string>
    <string name="fitness_tracker">Fitness Tracker</string>
    <string name="welcome_note">Welcome</string>
    <string name="your_ivps">Redeem Points :</string>
    <string name="articles">Health Articles</string>
    <string name="mini_checkup">Checkup</string>
    <string name="mini_guide">Guide</string>
    <string name="mini_wellness">Wellness</string>
    <string name="mini_fitness">Fitness</string>
    <string name="tips">Tip</string>
    <string name="title_activity_tip">Tip</string>
    <string name="dashboard_Status">Status :</string>
    <string name="dashboard_date">Date :</string>
    <string name="dashboard_name">Name :</string>
    <string name="dashboard_expirydate">Expiry Date :</string>
    <string name="dashboard_joining">JOINING</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="myAppo_apps_centre">Centre Name</string>
    <string name="file_uploadedby">Name</string>
    <string name="file_upladedDate">02-Mar-2018</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="reminder">Reminder</string>
    <string name="remind_title">Reminder Title</string>
    <string name="remind_time">Time</string>
    <string name="remind_submit">Submit</string>
    <string name="username">userName</string>
    <string name="userLName">userLastName</string>
    <string name="userMobile">userMobileNumber</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="about_us_text"> \t\t\t Indus Health Plus (P) Ltd. was incorporated in the year 2000 as a first-of-its-kind in the preventive healthcare sector.\n\t\t\t An ISO 9001:2015 certified company; Indus Health Plus is determined to live up to its motto of making quality healthcare Available, Accessible and Affordable, each and every day.
Headquartered in Pune,twe are present in major metros, tier I, II and III cities in India and UAE and GCC countries.Indirect alliance partners have helped us reach to pan India, especially rural parts to cater to the needs and convenience of our clientele.  \n\t\t\tIndus is consistent in spreading the word of timely checkup which not only saves an individual from premature death or disability but effectively saves their families from mental and physical trauma and financial distress.
 \n\t\t\tIndus aims to handhold its clients with care for all their preventive healthcare needs.\n
\t\t\tIndus drives the cause of prevention and is creating a successful framework for the government to effectively tackle the burden of non-communicable diseases, and in turn help in reducing the future burden on India’s already weak health infrastructure.</string>
    <string name="about_us_quotes">Let prevention reach you before cure\nLet disease get caught early and for sure!</string>
    <string name="title_activity_help_centre">HelpCentreActivity</string>
    <string name="getintouch">Get in touch with us</string>
    <string name="indus_address">\'INDUS HOUSE\', Pride Port, Model Colony, Pune-411  016 Maharashtra, India</string>
    <string name="indus_phone">0-90490-33333</string>
    <string name="indus_phone1">020 6647 2500</string>
    <string name="indus_fax">020-66493499</string>
    <string name="indus_email">info@indushealthplus.com</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="articlePreferences">Article Preferences</string>
    <string name="save">Save</string>
    <string name="visit_date">vDate</string>
    <string name="visit_value">vValue</string>
    <string name="visit_p_name">vName</string>
    <string name="title_activity_wellness">WellnessActivity</string>
    <string name="title_activity_fitnsee_tracker">FitnseeTrackerActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_main_feed_back">MainFeedBackActivity</string>
    <string name="general_info">General\nInformation</string>
    <string name="service_rel">Service\nRelated</string>
    <string name="additional_info">Additional\nInformation</string>
    <string name="questionGeneralOne">Do you know that the price of checkup package offered bu indus is offered is substantially lesser than the market price?</string>
    <string name="questionGeneralTwo">Do you know that the highest number of CT scan in the world are done for Indus Health Plus Client?</string>
    <string name="questionServiceOne">Service by Indus Customer Care Executive :</string>
    <string name="questionServiceTwo">Did the executive greet you?</string>
    <string name="questionServiceThree">Did the executive introduce himself/herself?</string>
    <string name="questionServiceFour">Check Up Process:</string>
    <string name="questionServiceFive">Breakfast:</string>
    <string name="login_with_fitbit">Login with Fitbit</string>
    <string name="fitbit_logo_description">Fitbit Logo</string>
</resources>