<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/image3x"
        android:padding="@dimen/image3x"
        app:cardCornerRadius="@dimen/image3x">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/image4x">

            <TextView
                android:id="@+id/tv_fileIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="@dimen/image3x"
                android:text="@string/fa_file_icon"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font5x" />

            <TextView
                android:id="@+id/tv_fileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/image4x"
                android:layout_toLeftOf="@+id/tv_share"
                android:layout_toRightOf="@+id/tv_fileIcon"
                android:padding="@dimen/image2x"
                android:text="@string/file_name"
                android:textColor="@color/colorgrey"
                android:textSize="@dimen/font3x" />

            <TextView
                android:id="@+id/tv_uploadedBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_fileName"
                android:layout_marginLeft="@dimen/image4x"
                android:layout_toLeftOf="@+id/tv_share"
                android:layout_toRightOf="@+id/tv_fileIcon"
                android:padding="@dimen/image2x"
                android:text="@string/file_uploadedby"
                android:textColor="@color/colorgrey"
                android:textSize="@dimen/font3x" />

            <TextView
                android:id="@+id/tv_uploadedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_uploadedBy"
                android:layout_marginLeft="@dimen/image4x"
                android:layout_toLeftOf="@+id/tv_share"
                android:layout_toRightOf="@+id/tv_fileIcon"
                android:padding="@dimen/image2x"
                android:text="@string/file_upladedDate"
                android:textColor="@color/colorgrey"
                android:textSize="@dimen/font3x" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:padding="@dimen/image3x"
                android:text="@string/fa_file_share_icon"
                android:layout_centerVertical="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font6x" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
